MWPW-172487: fix quotes for text spacing tools

--- a/express/code/blocks/quotes/quotes.css
+++ b/express/code/blocks/quotes/quotes.css
@@ -216,7 +216,6 @@
 .quotes .quote .content::before {
   content: '“';
   display: block;
-  position: absolute;
   margin-top: -15px;
   width: 36px;
   text-align: left;
